Fix icons visibility and gameboard size in start window

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,6 +48,7 @@ body {
   background: linear-gradient(-45deg, $cell-color-light, $cell-color-dark);
 }
 
-i {
+.fa-flag,
+.fa-question {
   font-size: 14px;
 }
